[gd_scene load_steps=10 format=3 uid="uid://dja8vtnjtu71r"]

[ext_resource type="Script" uid="uid://cyimfyibl5psf" path="res://event_rooms/chapter_01/password_event.gd" id="1_p040k"]
[ext_resource type="FontFile" uid="uid://d3fuaowohtamf" path="res://art/Font Styles/PressStart2P-Regular.ttf" id="2_im1h8"]
[ext_resource type="FontFile" uid="uid://7ucfniysa1ko" path="res://art/Font Styles/pixel_rpg.ttf" id="3_yyk8e"]
[ext_resource type="PackedScene" uid="uid://dnn5kg0tp0d22" path="res://scenes/event_rooms/event_room_button.tscn" id="4_qxix0"]

[sub_resource type="Gradient" id="Gradient_bdoxw"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0.00392157, 0.486275, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qac1c"]
gradient = SubResource("Gradient_bdoxw")
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)
metadata/_snap_enabled = true
metadata/_snap_count = 8

[sub_resource type="LabelSettings" id="LabelSettings_xdwsl"]
font = ExtResource("2_im1h8")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_wff3r"]
font = ExtResource("3_yyk8e")
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_yyk8e"]
font_size = 32

[node name="PasswordEvent" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p040k")
time_limit = 30
metadata/_custom_type_script = "uid://tq8b2oiw0lof"

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_qac1c")

[node name="EventTitle" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.5
offset_top = -33.5
offset_right = 155.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 17

[node name="title_label" type="Label" parent="EventTitle"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Password Game"
label_settings = SubResource("LabelSettings_xdwsl")

[node name="Description" type="Label" parent="EventTitle"]
layout_mode = 2
size_flags_horizontal = 4
text = "Create a password by following the required rules."
label_settings = SubResource("LabelSettings_wff3r")

[node name="StartButton" parent="EventTitle" instance=ExtResource("4_qxix0")]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="EventGame" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.5
offset_top = -106.5
offset_right = 185.5
offset_bottom = 106.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="EventGame"]
layout_mode = 2
text = "Enter Password:"
label_settings = SubResource("LabelSettings_yyk8e")

[node name="password_input" type="LineEdit" parent="EventGame"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
placeholder_text = "Create a password here"
keep_editing_on_text_submit = true

[node name="timer_bar" type="ProgressBar" parent="EventGame"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
show_percentage = false

[node name="check_button" parent="EventGame" instance=ExtResource("4_qxix0")]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 20)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Check Password (Enter Key)"

[node name="result_label" type="RichTextLabel" parent="EventGame"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/line_separation = 10
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountdownTimer" type="Timer" parent="EventGame"]
unique_name_in_owner = true

[node name="EventAfterMath" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -178.0
offset_top = -81.0
offset_right = 178.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2

[node name="aftermath_text" type="RichTextLabel" parent="EventAfterMath"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Hello"

[node name="continue_button" parent="EventAfterMath" instance=ExtResource("4_qxix0")]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Continue"

[connection signal="text_submitted" from="EventGame/password_input" to="." method="_on_password_input_text_submitted"]
